--- a/Readme
+++ b/Readme
@@ -10,7 +10,8 @@ linux c 实现 linux下的cal简单命令
   输出指定年月的日历
 
 测试环境
-ubuntu 14.04 32bit
+ * os: ubuntu 14.04 32bit
+ * gcc version 4.8.4 (Ubuntu 4.8.4-2ubuntu1~14.04.3) 
 ---
 
 知识点
@@ -23,4 +24,5 @@ ubuntu 14.04 32bit
 
 * makefile书写, main函数参数
 
-× 程序还是有待检验的，实现的也不是完完整整的cal
+
+程序还是有待检验的，实现的也不是完完整整的cal, 待改进...
